# ChipWise-Enterprise

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.celery  Dockerfile.embedding  Dockerfile.reranker  README.md  WORKLOG.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  pyproject.toml  requirements-services.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  frontend.yml  lint.yml  release.yml  security-scan.yaml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_kg_metadata.py
config/: celery_config.py  settings.yaml
config/prometheus/: alert_rules.yml  prometheus.yml
config/prompts/: agent_system.txt  chip_comparison.txt  design_rule_extraction.txt  param_extraction.txt  (+3 more)
data/: golden_qa.jsonl  kuzu
docs/: ARCHITECTURE.md  BACKEND_LEARNING_GUIDE.md  COMPLIANCE.md  COVERAGE_GAPS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_PLAN.md  ENTERPRISE_DEV_SPEC.md  GIT_GITHUB_GUIDE.md  LOCAL_DEVELOPMENT.md  OPERATIONS.md  SECURITY_AUDIT.md  SECURITY_BASELINE.md  USER_GUIDE.md
frontend/: gradio_app.py
reports/: bandit-baseline.json  licenses-python.json  npm-audit-baseline.json  pip-audit-baseline.json  sbom-frontend.json  sbom-python.json
scripts/: deploy.sh  expand_golden_p0.py  healthcheck.py  init_db.py  init_kuzu.py  init_milvus.py  launch_celery.sh  migrate_bm25.py  seed_data.py  seed_demo_data.py  seed_golden.py  setup_lmstudio.py  start_services.sh
src/: __init__.py
tests/: conftest.py
(+337 files in other folders)
